crates/red_knot_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_`__iter__`_set_to_a_custom_callable_with_possibly_unbound_`__call__`.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - `__iter__` set to a custom callable with possibly unbound `__call__`
mdtest path: crates/red_knot_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import ClassVar, reveal_type
 2 | 
 3 | def _(flag: bool):
 4 |     class Iterator:
 5 |         def __next__(self) -> int:
 6 |             return 42
 7 | 
 8 |     class MaybeCallable:
 9 |         if flag:
10 |             def __call__(self, *args, **kwargs) -> Iterator:
11 |                 return 42
12 | 
13 |     class Foo:
14 |         __iter__: ClassVar[MaybeCallable] = MaybeCallable()
15 | 
16 |     # error: [not-iterable]
17 |     for x in Foo():
18 |         reveal_type(x)  # revealed: int
19 | 
20 |     class Bar:
21 |         __iter__ = MaybeCallable()
22 | 
23 |     # error: [not-iterable]
24 |     for y in Bar():
25 |         reveal_type(y)  # revealed: Unknown | int
```

# Diagnostics

```
error: lint:not-iterable
  --> /src/mdtest_snippet.py:17:14
   |
16 |     # error: [not-iterable]
17 |     for x in Foo():
   |              ^^^^^ Object of type `Foo` may not be iterable because its `__iter__` attribute (with type `MaybeCallable`) may not be callable
18 |         reveal_type(x)  # revealed: int
   |

```

```
info: revealed-type
  --> /src/mdtest_snippet.py:18:9
   |
16 |     # error: [not-iterable]
17 |     for x in Foo():
18 |         reveal_type(x)  # revealed: int
   |         -------------- info: Revealed type is `int`
19 |
20 |     class Bar:
   |

```

```
error: lint:not-iterable
  --> /src/mdtest_snippet.py:24:14
   |
23 |     # error: [not-iterable]
24 |     for y in Bar():
   |              ^^^^^ Object of type `Bar` may not iterable because its `__iter__` method has type `Unknown | MaybeCallable`, and some members of the union do not conform to the iteration protocol
25 |         reveal_type(y)  # revealed: Unknown | int
   |

```

```
info: revealed-type
  --> /src/mdtest_snippet.py:25:9
   |
23 |     # error: [not-iterable]
24 |     for y in Bar():
25 |         reveal_type(y)  # revealed: Unknown | int
   |         -------------- info: Revealed type is `Unknown | int`
   |

```
